[gd_scene load_steps=5 format=3 uid="uid://cnkk2r47df4rw"]

[ext_resource type="FontFile" uid="uid://knqvq3hw7oja" path="res://pixel.ttf" id="1_gjtqb"]
[ext_resource type="Script" uid="uid://dodxuncujk4vl" path="res://PauseMenu.gd" id="1_i2bwt"]

[sub_resource type="InputEventAction" id="InputEventAction_675g3"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_a6plm"]
events = [SubResource("InputEventAction_675g3")]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_i2bwt")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="MenuHolder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -55.0
offset_right = 74.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="MenuHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("1_gjtqb")
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_a6plm")
text = "Resume"
flat = true

[node name="RestartButton" type="Button" parent="MenuHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("1_gjtqb")
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_a6plm")
text = "Restart"
flat = true

[node name="MenuButton" type="Button" parent="MenuHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("1_gjtqb")
theme_override_font_sizes/font_size = 20
text = "Menu"
flat = true

[connection signal="pressed" from="MenuHolder/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuHolder/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuHolder/MenuButton" to="." method="_on_menu_button_pressed"]
